--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="table-sticky-top" class="sticky-top">
-            <label for="select-routine">Routine:</label>
-            <select name="routine" id="select-routine"></select>
+        <div id="table-sticky-top" class="row border-bottom border-1 sticky-top">
+            <label for="routine-select" class="col-sm-2 col-form-label">Routine</label>
+            <select name="routine-select" class="col form-control" id="select-routine"></select>
         </div>
         <div id="routine-app"></div>
     </div>
@@ -33,16 +33,16 @@
 
                     <ul class="nav nav-tabs" id="modal-tabs" role="tablist">
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link active" id="general-tab" data-bs-toggle="tab" data-bs-target="#general" type="button" role="tab" aria-controls="general" aria-selected="true">General</button>
+                            <button class="nav-link active" id="general-tab" data-bs-toggle="tab" data-bs-target="#general-pane" type="button" role="tab" aria-controls="general" aria-selected="true">General</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="horses-tab" data-bs-toggle="tab" data-bs-target="#horses" type="button" role="tab" aria-controls="horses" aria-selected="false">Horses</button>
+                            <button class="nav-link" id="horses-tab" data-bs-toggle="tab" data-bs-target="#horses-pane" type="button" role="tab" aria-controls="horses" aria-selected="false">Horses</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="people-tab" data-bs-toggle="tab" data-bs-target="#people" type="button" role="tab" aria-controls="people" aria-selected="false">People</button>
+                            <button class="nav-link" id="people-tab" data-bs-toggle="tab" data-bs-target="#people-pane" type="button" role="tab" aria-controls="people" aria-selected="false">People</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="inventory-tab" data-bs-toggle="tab" data-bs-target="#inventory" type="button" role="tab" aria-controls="inventory" aria-selected="false">Inventory</button>
+                            <button class="nav-link" id="inventory-tab" data-bs-toggle="tab" data-bs-target="#inventory-pane" type="button" role="tab" aria-controls="inventory" aria-selected="false">Inventory</button>
                         </li>
                     </ul>
 
@@ -89,7 +89,7 @@
                             <div class="row form-group">
                                 <label for="location" class="col-sm-2 col-form-label">Location</label>
                                 <div class="col-sm-10">
-                                    <select name="" id="location" class="form-control"></select>
+                                    <select name="location" id="location" class="form-control"></select>
                                 </div>
                             </div>
                             <div class="row form-group">
@@ -100,21 +100,98 @@
                             </div>
                         </div>
                         <div class="tab-pane" id="horses-pane" role="tabpanel" aria-labelledby="horses-tab">
+                            <div class="row">
+                                <div class="col-3">
+                                    <select id="horses-search-type" class="form-control">
+                                        <option value="0">ID</option>
+                                        <option value="1">Name</option>
+                                        <option value="2">Tag</option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <input type="text" id="horses-search" name="horses" class="search form-control" placeholder="Search...">
+                                </div>
+                            </div>
 
+                            <table class="table table-bordered" id="horses-table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col" class="col-1">
+                                            <input type="checkbox" class="form-check-input" id="select-all-checkbox"></input>
+                                        </th>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Tags</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="horses-table-body"></tbody>
+                            </table>
                         </div>
-                        <div class="tab-pane" id="people-pane" role="tabpanel" aria-labelledby="people-tab">
 
+                        <div class="tab-pane" id="people-pane" role="tabpanel" aria-labelledby="people-tab">
+                            <div class="row">
+                                <div class="col-3">
+                                    <select id="people-search-type" class="form-control">
+                                        <option value="0">ID</option>
+                                        <option value="1">Name</option>
+                                        <option value="2">Tag</option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <input type="text" id="people-search" name="people" class="search form-control" placeholder="Search...">
+                                </div>
+                            </div>
+
+                            <table class="table table-bordered" id="people-table">
+                                <thead>
+                                <tr>
+                                    <th scope="col" class="col-1">
+                                        <input type="checkbox" class="form-check-input" id="select-all-checkbox"></input>
+                                    </th>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Tags</th>
+                                </tr>
+                                </thead>
+                                <tbody id="people-table-body"></tbody>
+                            </table>
                         </div>
                         <div class="tab-pane" id="inventory-pane" role="tabpanel" aria-labelledby="inventory-tab">
+                            <div class="row">
+                                <div class="col-3">
+                                    <select id="inventory-search-type" class="form-control">
+                                        <option value="0">ID</option>
+                                        <option value="1">Name</option>
+                                        <option value="2">Tag</option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <input type="text" id="inventory-search" name="inventory" class="search form-control" placeholder="Search...">
+                                </div>
+                            </div>
 
+                            <table class="table table-bordered" id="inventory-table">
+                                <thead>
+                                <tr>
+                                    <th scope="col" class="col-1">
+                                        <input type="checkbox" class="form-check-input" id="select-all-checkbox"></input>
+                                    </th>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Tags</th>
+                                </tr>
+                                </thead>
+                                <tbody id="inventory-table-body"></tbody>
+                            </table>
                         </div>
                     </div>
 
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-danger float-start" data-bs-dismiss="modal">Delete</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="save-changes-btn">Save changes</button>
                 </div>
             </div>
         </div>
