--- a/templates/index.html
+++ b/templates/index.html
@@ -46,50 +46,91 @@
                         </li>
                     </ul>
 
-                    <div class="tab-content" id="myTabContent">
+                    <div class="tab-content">
                         <div class="tab-pane show active" id="general-pane" role="tabpanel" aria-labelledby="general-tab">
                             <div class="row form-group">
                                 <label for="name" data-label class="col-sm-2 col-form-label">Name</label>
                                 <div class="col-sm-10">
-                                    <input id="name" data-label="name" type="text" class="form-control general-uid"></input>
+                                    <input id="name" data-label="name" type="text" class="form-control general-key">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <label for="routines" class="col-sm-2 col-form-label">Routine</label>
+                                <div class="col-sm-10">
+                                    <select name="routines" data-label="routines" id="routines" class="form-control"></select>
                                 </div>
                             </div>
                             <div class="row form-group">
                                 <label for="notes" class="col-sm-2 col-form-label">Notes</label>
                                 <div class="col-sm-10">
-                                    <textarea id="notes" data-label="name" class="form-control general-uid"></textarea>
+                                    <textarea id="notes" data-label="notes" class="form-control general-key"></textarea>
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <label for="day" class="col-sm-2 col-form-label">Day</label>
-                                <div class="col-sm-10">
-                                    <select name="" id="day" data-label="day" class="form-control">
-                                        <option value="1">Monday</option>
-                                        <option value="2">Tuesday</option>
-                                        <option value="3">Wednesday</option>
-                                        <option value="4">Thursday</option>
-                                        <option value="5">Friday</option>
-                                        <option value="6">Saturday</option>
-                                        <option value="7">Sunday</option>
-                                    </select>
+                                <label for="days" class="col-sm-2 col-form-label">Days</label>
+                                <div name="days" class="col-sm-10" id="days">
+                                    <div class="row">
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="1" id="mon">
+                                            <label class="form-check-label" for="mon">
+                                                Mon
+                                            </label>
+                                        </div>
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="2" id="tue">
+                                            <label class="form-check-label" for="tue">
+                                                Tue
+                                            </label>
+                                        </div>
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="3" id="wed">
+                                            <label class="form-check-label" for="wed">
+                                                Wed
+                                            </label>
+                                        </div>
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="4" id="thu">
+                                            <label class="form-check-label" for="thu">
+                                                Thu
+                                            </label>
+                                        </div>
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="5" id="fri">
+                                            <label class="form-check-label" for="fri">
+                                                Fri
+                                            </label>
+                                        </div>
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="6" id="sat">
+                                            <label class="form-check-label" for="sat">
+                                                Sat
+                                            </label>
+                                        </div>
+                                        <div class="day-checkbox col">
+                                            <input class="form-check-input" type="checkbox" data-day="7" id="sun">
+                                            <label class="form-check-label" for="sun">
+                                                Sun
+                                            </label>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row form-group">
                                 <label for="start" class="col-sm-2 col-form-label">Start</label>
                                 <div class="col-sm-10">
-                                    <input type="time" id="start" data-label="start" class="form-control general-uid"></input>
+                                    <input type="time" id="start" data-label="start" class="form-control general-key"></input>
                                 </div>
                             </div>
                             <div class="row form-group">
                                 <label for="end" class="col-sm-2 col-form-label">End</label>
                                 <div class="col-sm-10">
-                                    <input type="time" id="end" data-label="end" class="form-control general-uid"></input>
+                                    <input type="time" id="end" data-label="end" class="form-control general-key"></input>
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <label for="location" class="col-sm-2 col-form-label">Location</label>
+                                <label for="locations" class="col-sm-2 col-form-label">Location</label>
                                 <div class="col-sm-10">
-                                    <select name="location" data-label="location" id="location" class="form-control"></select>
+                                    <select name="locations" data-label="locations" id="locations" class="form-control"></select>
                                 </div>
                             </div>
                             <div class="row form-group">
@@ -117,7 +158,7 @@
                                 <thead>
                                     <tr>
                                         <th scope="col" class="col-1">
-                                            <input type="checkbox" class="form-check-input" id="select-all-checkbox"></input>
+                                            <input type="checkbox" class="form-check-input" id="select-all-checkbox">
                                         </th>
                                         <th scope="col">ID</th>
                                         <th scope="col">Name</th>
