--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                     <div class="tab-content">
                         <div class="tab-pane show active" id="general-pane" role="tabpanel" aria-labelledby="general-tab">
                             <div class="row form-group">
-                                <label for="name" data-label class="col-sm-2 col-form-label">Name</label>
+                                <label for="name" class="col-sm-2 col-form-label">Name</label>
                                 <div class="col-sm-10">
                                     <input id="name" data-label="name" type="text" class="form-control general-key">
                                 </div>
@@ -136,7 +136,7 @@
                             <div class="row form-group">
                                 <label for="colour" class="col-sm-2 col-form-label">Colour</label>
                                 <div class="col-sm-10">
-                                    <input type="color" name="colour" data-label="colour" id="colour" class="form-control"></input>
+                                    <input type="color" name="colour" data-label="colour" id="colour" class="form-control general-key"></input>
                                 </div>
                             </div>
                         </div>
