editing completely works now

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="table-sticky-top" class="row border-bottom border-1 sticky-top">
             <label for="routine-select" class="col-sm-2 col-form-label">Routine</label>
-            <select name="routine-select" class="col form-control" id="select-routine"></select>
+            <select name="routine-select" class="col form-control" id="routine-select"></select>
         </div>
         <div id="routine-app"></div>
     </div>
@@ -55,9 +55,9 @@
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <label for="routines" class="col-sm-2 col-form-label">Routine</label>
+                                <label for="routine" class="col-sm-2 col-form-label">Routine</label>
                                 <div class="col-sm-10">
-                                    <select name="routines" data-label="routines" id="routines" class="form-control"></select>
+                                    <select name="routine" data-label="routine" id="routine" class="form-control general-key"></select>
                                 </div>
                             </div>
                             <div class="row form-group">
@@ -128,9 +128,9 @@
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <label for="locations" class="col-sm-2 col-form-label">Location</label>
+                                <label for="location" class="col-sm-2 col-form-label">Location</label>
                                 <div class="col-sm-10">
-                                    <select name="locations" data-label="locations" id="locations" class="form-control"></select>
+                                    <select name="location" data-label="location" id="location" class="form-control general-key"></select>
                                 </div>
                             </div>
                             <div class="row form-group">
