--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,46 @@
 </head>
 <body>
     <div class="container">
-        <div id="table-sticky-top" class="row border-bottom border-1 sticky-top">
-            <label for="routine-select" class="col-sm-2 col-form-label">Routine</label>
-            <select name="routine-select" class="col form-control" id="routine-select"></select>
+        <div id="table-sticky-top" class="col border-bottom border-1 sticky-top row">
+            <div class="col">
+                <button class="btn btn-primary" id="new-task-btn" data-bs-target= "#edit-task" data-bs-toggle="modal">+ New Task</button>
+            </div>
+            <div class="col">
+                <label for="routine-select" class="col-sm-2 col-form-label">Routine:</label>
+            </div>
+            <div class="col">
+                <select name="routine-select" class="col form-control" id="routine-select">
+                    <option value="not-selected" disabled>Select Routine...</option>
+                </select>
+            </div>
+            <div class="col">
+                <label for="filter-datatype-select" class="col-sm-2 col-form-label">Filter:</label>
+            </div>
+            <div class="col">
+                <select id="filter-datatype-select" name="filter-datatype-select" class="col form-control" selected="">
+                    <option value="not-selected" disabled selected>Select Datatype...</option>
+                    <option value="locations">Locations</option>
+                    <option value="horses">Horses</option>
+                    <option value="people">People</option>
+                    <option value="inventory">Inventory</option>
+                </select>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary" id="filter-btn" data-bs-target= "#filter-modal" data-bs-toggle="modal">Filter...</button>
+            </div>
         </div>
         <div id="routine-app"></div>
     </div>
 
     <!-- Modal -->
-    <div class="modal" id="edit-task" tabindex="-1" role="dialog" aria-labelledby="edit-task-label" aria-hidden="true">
+    <div class="modal" id="edit-task" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
 
                     <h5 class="modal-title" id="edit-task-title"></h5>
 
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     </button>
                 </div>
 
@@ -70,44 +93,44 @@
                                 <label for="days" class="col-sm-2 col-form-label">Days</label>
                                 <div name="days" class="col-sm-10" id="days">
                                     <div class="row">
-                                        <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="1" id="mon">
+                                        <div class="col">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="1" id="mon">
                                             <label class="form-check-label" for="mon">
                                                 Mon
                                             </label>
                                         </div>
                                         <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="2" id="tue">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="2" id="tue">
                                             <label class="form-check-label" for="tue">
                                                 Tue
                                             </label>
                                         </div>
                                         <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="3" id="wed">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="3" id="wed">
                                             <label class="form-check-label" for="wed">
                                                 Wed
                                             </label>
                                         </div>
                                         <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="4" id="thu">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="4" id="thu">
                                             <label class="form-check-label" for="thu">
                                                 Thu
                                             </label>
                                         </div>
                                         <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="5" id="fri">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="5" id="fri">
                                             <label class="form-check-label" for="fri">
                                                 Fri
                                             </label>
                                         </div>
                                         <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="6" id="sat">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="6" id="sat">
                                             <label class="form-check-label" for="sat">
                                                 Sat
                                             </label>
                                         </div>
                                         <div class="day-checkbox col">
-                                            <input class="form-check-input" type="checkbox" data-day="7" id="sun">
+                                            <input class="form-check-input day-checkbox" type="checkbox" data-day="7" id="sun">
                                             <label class="form-check-label" for="sun">
                                                 Sun
                                             </label>
@@ -229,10 +252,57 @@
 
                 </div>
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger float-start" data-bs-dismiss="modal">Delete</button>
+                <div class="modal-footer" id="edit-task-footer" hidden>
+                    <button type="button" class="btn btn-danger float-start" data-bs-dismiss="modal" id="delete-task-btn">Delete</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="save-changes-btn">Save changes</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="save-task-btn">Save changes</button>
+                </div>
+                <div class="modal-footer" id="new-task-footer" hidden>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="create-new-task-btn">Create task</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="filter-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="filter-title"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-3">
+                            <select id="filter-search-type" class="form-control">
+                                <option value="0">ID</option>
+                                <option value="1">Name</option>
+                                <option value="2">Tag</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <input type="text" id="filter-search" name="filter-search" class="search form-control" placeholder="Search...">
+                        </div>
+                        <table class="table table-bordered" id="inventory-table">
+                            <thead>
+                            <tr>
+                                <th scope="col" class="col-1">
+                                    <input type="checkbox" class="form-check-input" id="select-all-checkbox"></input>
+                                </th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Tags</th>
+                            </tr>
+                            </thead>
+                            <tbody id="filter-table-body" data-last-resource=""></tbody>
+                        </table>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" id="apply-filter-btn" data-bs-dismiss="modal" id="save-task-btn">Apply Filter</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
