filter now functional

--- a/templates/index.html
+++ b/templates/index.html
@@ -290,10 +290,10 @@
                             </select>
                         </div>
                         <div class="col">
-                            <input type="text" id="filter-search" name="filter-search" class="search form-control" placeholder="Search...">
+                            <input type="text" id="filter-search" name="filter" class="search form-control" placeholder="Search...">
                         </div>
                     </div>
-                    <table class="table table-bordered" id="inventory-table">
+                    <table class="table table-bordered" id="filter-table">
                         <thead>
                         <tr>
                             <th scope="col" class="col-1">
